<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Constants" Id="{17cf1aae-7cee-4ad3-a519-7db4e6e69ad2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	PI 					: REAL 	:= 3.141592654;
	SPEED_CALC_Cycle 	: INT 	:= 100; 			// in microseconds
	NUMBER_OF_POLEPAIRS : UINT 	:= 5;
	PULSES_PER_REV 		: UINT 	:= 4096*4;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>